objects/checkman__Checklist_Manager__mdt.object
<CustomObject>
    <fields>
        <fullName>checkman__Checklist_Item__c</fullName>
        <label>Checklist Item</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>checkman__Object_API__c</fullName>
        <label>Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>checkman__Order__c</fullName>
        <inlineHelpText>Please enter the order in which you want to display your checklist items</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>checkman__Record_Type_Developer_Name__c</fullName>
        <label>Record Type - Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Checklist Manager</label>
    <listViews>
        <fullName>checkman__All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>checkman__Record_Type_Developer_Name__c</columns>
        <columns>checkman__Checklist_Item__c</columns>
        <columns>checkman__Object_API__c</columns>
        <columns>checkman__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>Checklist Manager</pluralLabel>
</CustomObject>